<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="Zustandshandling" Id="{1538f04a-641c-4796-9a11-795f1ce5ec8a}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM Zustandshandling
VAR
	iState			:eSystemState;
	
	bEinschalten	:BOOL;
	bAusschalten	:BOOL;
	bStarten		:BOOL;
	bStoppen		:BOOL;
	bFehler			:BOOL;
	bResetten		:BOOL;
	bAbgeschlossen	:BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[GVL.SystemState := iState;

CASE iState OF
	0:	// AUS
			// DO
			IF GVL.Greifer_State = 1 AND GVL.Robot_State = 1 AND GVL.Sensor_State = 1 THEN
				bEinschalten := TRUE;
			END_IF
			
			// TRANSITION
			IF bEinschalten THEN
				bEinschalten := FALSE;
				iState := 1;
			END_IF
		
			
	1:	// BEREIT
			// DO
			IF GVL.Greifer_State = 3 AND GVL.Robot_State = 3 AND GVL.Sensor_State = 3 THEN
				bStarten := TRUE;
			END_IF
			
			IF GVL.Greifer_State = 0 THEN
				bAusschalten := TRUE;
			END_IF
			
			IF GVL.ErrorID <> 0 THEN
				bFehler := TRUE;
			END_IF
			
			// TRANSITION
			IF bStarten THEN
				bStarten := FALSE;
				iState := 2;
			END_IF
			
			IF bAusschalten THEN
				bAusschalten := FALSE; 
				iState := 0;
			END_IF
			
			IF bFehler THEN
				bFehler := FALSE;
				iState := 4;
			END_IF
			
	2:	// LAUFEND
			// DO
			IF GVL.SystemCommand = 3 THEN
				bStoppen := TRUE;
			END_IF
			
			IF GVL.Greifer_State = 1 AND GVL.Robot_State = 1 AND GVL.Sensor_State = 1  THEN
				bAbgeschlossen := TRUE;
			END_IF
			
			IF GVL.ErrorID <> 0 THEN
				bFehler := TRUE;
			END_IF
			
			// TRANSITION
			IF bStoppen THEN
				bStoppen := FALSE;
				iState := 3;
			END_IF
			
			IF bAbgeschlossen THEN
				bAbgeschlossen := FALSE;
				iState := 1;
			END_IF
			
			IF bFehler THEN
				bFehler := FALSE;
				iState := 4;
			END_IF
			
	3:	// GESTOPPT
			// DO
			IF GVL.SystemCommand = 4 THEN
				bResetten := TRUE;
			END_IF
			
			// TRANSITION
			IF bResetten THEN
				bResetten := FALSE;
				iState := 1;
			END_IF
			
	4:	// FEHLER
			// DO
			IF GVL.SystemCommand = 4 THEN
				bResetten := TRUE;
			END_IF
			
			// TRANSITION
			IF bResetten THEN
				bResetten := FALSE;
				iState := 1;
			END_IF
			
END_CASE]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>